--- a/index.html
+++ b/index.html
@@ -38,5 +38,7 @@
     </form>
     
     <p>Need to contact us? <a href="contact.html">Go to contact form</a></p>
+    <a href="pay.html">Go to Pay Page</a>
+
 </body>
 </html>
