--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <h2>Log In to Your Account</h2>
-    <h3>Please enter your credentials below</h3>
+    <h3>Please enter your login details.</h3>
     <br>
     
     <!-- Login Form -->
