--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </form>
     
 
-    <a href="donation.html">Go to Pay Page</a>
+    <a href="donation.html"> help with donations </a>
 
 </body>
 </html>
