--- a/donation.html
+++ b/donation.html
@@ -66,6 +66,6 @@
         <button type="submit">Submit Form</button>
     </form>
     
-    <p>Already have an account? <a href="login.html">Log in here</a></p>
+    <p>Already have an account? <a href="index.html">Log in here</a></p>
 </body>
 </html>
