--- a/donation.html
+++ b/donation.html
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <h2>Contact Us</h2>
+    <h2> Donation </h2>
     <h3>Please fill out the form below to get in touch with our team.</h3>
     <br>
     
