--- a/donation.html
+++ b/donation.html
@@ -63,6 +63,7 @@
 
         <!-- Custom Amount Input (Hidden by Default) -->
         <label for="custom_amount" id="custom_amount_label" style="display:none;">Enter Custom Amount:</label>
+        <input type="number" id="custom_amount" name="custom_amount" min="1" step="1" style="display:none;"><br><br>
 
         <label for="message">Message:</label>
         <textarea id="message" name="message" rows="4"></textarea><br><br>
@@ -71,7 +72,10 @@
     </form>
 
     <p>Already have an account? <a href="index.html">Log in here</a></p>
- document.getElementById("donation_amount").addEventListener("change", function() {
+
+    <script>
+        // Show custom amount input if "Custom Amount" is selected
+        document.getElementById("donation_amount").addEventListener("change", function() {
             if (this.value === "custom") {
                 document.getElementById("custom_amount_label").style.display = "block";
                 document.getElementById("custom_amount").style.display = "block";
@@ -85,3 +89,4 @@
     </script>
 </body>
 </html>
+
