--- a/donation.html
+++ b/donation.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <h2> Donation </h2>
-    <h3>Please fill out the form below to get in touch with our team.</h3>
+    <h3>Any donation is appreciated.</h3>
     <br>
     
     <!-- Contact/Payment Form -->
