--- a/donation.html
+++ b/donation.html
@@ -71,7 +71,7 @@
         <button type="submit">Submit Form</button>
     </form>
 
-    <p>Already have an account? <a href="index.html">Log in here</a></p>
+    <p> go back to log in <a href="index.html">Log in here</a></p>
 
     <script>
         // Show custom amount input if "Custom Amount" is selected
