--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <div style="background-color: lightgrey; padding: 20px;">
-    This section has a light grey background.
-</div>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login to Your Account</title>
     <style>
+        /* Light Grey Background */
+        body {
+            background-color: lightgrey;
+            font-family: Arial, sans-serif; /* Makes text more readable */
+            padding: 20px;
+        }
+
         h2, h3 {
             color: #2c3e50;
         }
+
         button {
             background-color: #3498db;
             color: white;
@@ -20,6 +24,7 @@
             border-radius: 4px;
             cursor: pointer;
         }
+
         button:hover {
             background-color: #2980b9;
         }
@@ -40,9 +45,11 @@
         
         <button type="submit">Log In</button>
     </form>
-    
 
-    <a href="donation.html"> help with donations </a>
+    <br>
+
+    <!-- Donation Help Link -->
+    <a href="donation.html">Help with donations</a>
 
 </body>
 </html>
