--- a/donation.html
+++ b/donation.html
@@ -8,8 +8,17 @@
 
         body {
             background-color: #ccffcc; 
+            font-family: Arial, sans-serif;
+            text-align: center;
         }
 
+        .container {
+            max-width: 500px;
+            margin: auto;
+            background-color: #ccffcc;
+            padding: 20px;
+            border-radius: 8px;
+        }
 
         h2, h3 {
             color: #2c3e50;
@@ -38,9 +47,21 @@
         a:hover {
             text-decoration: underline;
         }
+
+        /* Style for the image */
+        .donation-image {
+            width: 300px; /* Adjust size as needed */
+            height: auto;
+            display: block;
+            margin: 20px auto; /* Center the image */
+        }
+
     </style>
 </head>
 <body>
+
+    <!-- Image Added Here -->
+    <img src="https://banner2.cleanpng.com/20180329/xbq/avix4wt4s.webp" alt="Donation Image" class="donation-image">
 
     <div class="container">
         <h2> Donation </h2>
