--- a/donation.html
+++ b/donation.html
@@ -61,7 +61,8 @@
 <body>
 
     <!-- Image Added Here -->
-    <img src="https://banner2.cleanpng.com/20180329/xbq/avix4wt4s.webp" alt="Donation Image" class="donation-image">
+   <img src="https://i.imgur.com/example.png" alt="Donation Image" class="donation-image">
+
 
     <div class="container">
         <h2> Donation </h2>
