--- a/donation.html
+++ b/donation.html
@@ -48,13 +48,15 @@
             text-decoration: underline;
         }
 
-        /* Style for the image */
-        .donation-image {
-            width: 300px; /* Adjust size as needed */
-            height: auto;
-            display: block;
-            margin: 20px auto; /* Center the image */
-        }
+       /* Style for the image */
+.donation-image {
+    width: 150px; /* Smaller width */
+    height: auto; /* Keeps aspect ratio */
+    display: block;
+    margin: 10px auto; /* Less margin for better spacing */
+}
+
+        
 
     </style>
 </head>
