--- a/donation.html
+++ b/donation.html
@@ -12,13 +12,6 @@
             text-align: center;
         }
 
-        .container {
-            max-width: 500px;
-            margin: auto;
-            background-color: #ccffcc;
-            padding: 20px;
-            border-radius: 8px;
-        }
 
         h2, h3 {
             color: #2c3e50;
@@ -50,8 +43,8 @@
 
        /* Style for the image */
 .donation-image {
-    width: 150px; /* Smaller width */
-    height: auto; /* Keeps aspect ratio */
+    width: 100px; /* Smaller width */
+    height: 100px; /* Keeps aspect ratio */
     display: block;
     margin: 10px auto; /* Less margin for better spacing */
 }
