--- a/donation.html
+++ b/donation.html
@@ -41,12 +41,11 @@
             text-decoration: underline;
         }
 
-       /* Style for the image */
 .donation-image {
-    width: 100px; /* Smaller width */
-    height: 100px; /* Keeps aspect ratio */
+    width: 100px; 
+    height: 100px; 
     display: block;
-    margin: 10px auto; /* Less margin for better spacing */
+    margin: 10px auto; 
 }
 
         
@@ -56,7 +55,7 @@
 <body>
 
     <!-- Image Added Here -->
-   <img src="https://i.imgur.com/example.png" alt="Donation Image" class="donation-image">
+   <img src="https://w7.pngwing.com/pngs/178/627/png-transparent-donation-computer-icons-charitable-organization-donate-miscellaneous-text-trademark.png" alt="Donation Image" class="donation-image">
 
 
     <div class="container">
