--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-    <h2>Log In to Your Account</h2>
+    <h2>Login To Your Account</h2>
     <h3>Please enter your login details.</h3>
     <br>
     
