--- a/donation.html
+++ b/donation.html
@@ -7,6 +7,7 @@
     <style>
         body {
             background-color: #ccffcc; 
+            font-family: Arial, sans-serif;
             text-align: center;
         }
 
@@ -46,10 +47,13 @@
             margin: 10px auto; 
         }
 
-        /* Center custom amount input */
+        /* Center the custom amount input properly */
         .custom-amount-container {
             text-align: center;
             margin-top: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         #custom_amount {
@@ -112,7 +116,6 @@
             <!-- Custom Amount Input (Hidden by Default) -->
             <div class="custom-amount-container">
                 <label for="custom_amount" id="custom_amount_label" style="display:none;">Enter Custom Amount:</label>
-                <br>
                 <input type="number" id="custom_amount" name="custom_amount" min="1" step="1" style="display:none;">
             </div><br>
 
@@ -143,4 +146,3 @@
 
 </body>
 </html>
-
