--- a/donation.html
+++ b/donation.html
@@ -47,23 +47,32 @@
             margin: 10px auto; 
         }
 
-        /* Center the custom amount input properly */
-        .custom-amount-container {
-            text-align: center;
-            margin-top: 10px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+       /* Center and style the custom amount input */
+.custom-amount-container {
+    text-align: center;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-        #custom_amount {
-            display: none;
-            width: 200px;
-            padding: 5px;
-            text-align: center;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            margin-top: 5px;
+#custom_amount {
+    display: none;
+    width: 100px; /* Make the input box smaller */
+    padding: 5px;
+    text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-top: 5px;
+    appearance: none; /* Removes the spinner arrows */
+    -moz-appearance: textfield; /* Removes arrows for Firefox */
+}
+
+#custom_amount::-webkit-inner-spin-button,
+#custom_amount::-webkit-outer-spin-button {
+    display: none; /* Removes arrows for Chrome & Safari */
+}
+
         }
     </style>
 </head>
