--- a/donation.html
+++ b/donation.html
@@ -109,8 +109,9 @@
                 <input type="text" id="custom_amount" name="custom_amount" inputmode="numeric" pattern="[0-9]*" style="display:none;">
             </div><br>
 
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="4" cols="50" style="overflow: hidden;"></textarea><br><br>
+          <label for="message">Message:</label>
+<textarea id="message" name="message" rows="4" cols="50" style="width: 300px; height: 100px; overflow: auto;"></textarea><br><br>
+
             
             <button type="submit">Submit Form</button>
         </form>
