--- a/donation.html
+++ b/donation.html
@@ -7,7 +7,6 @@
     <style>
         body {
             background-color: #ccffcc; 
-            font-family: Arial, sans-serif;
             text-align: center;
         }
 
@@ -65,7 +64,7 @@
 
     <div class="container">
         <h2>Donation</h2>
-        <h3>Any donation is appreciated.</h3>
+        <h3>Any donation is appreciated!</h3>
         <br>
 
         <!-- Contact/Payment Form -->
