--- a/donation.html
+++ b/donation.html
@@ -85,7 +85,9 @@
             <label for="mastercard">MasterCard</label>
             <input type="radio" id="amex" name="payment_method" value="Amex">
             <label for="amex">American Express</label>
-            <label label>
+            <input type="radio" id="discover" name="payment_method" value="Discover">
+            <label for="discover">Discover</label><br><br>
+            
             <label for="card_number">Credit Card Number:</label>
             <input type="text" id="card_number" name="card_number" required><br><br>
 
@@ -107,7 +109,7 @@
             </div><br>
 
           <label for="message">Message:</label>
-<textarea id="message" name="message" rows="4" cols="50" style="width: 250px; height: 150px; overflow: auto;"></textarea><br><br>
+<textarea id="message" name="message" rows="4" cols="50" style="width: 100px; height: 100px; overflow: auto;"></textarea><br><br>
 
             
             <button type="submit">Submit Form</button>
