--- a/donation.html
+++ b/donation.html
@@ -116,7 +116,7 @@
         </form>
 
         <br>
-        <p>Go back to <a href="index.html">Log in here</a></p>
+        <p>Go back to <a href="index.html">Log in page</a></p>
     </div>
 
     <script>
