--- a/donation.html
+++ b/donation.html
@@ -112,7 +112,7 @@
 <textarea id="message" name="message" rows="4" cols="50" style="width: 200px; height: 50px; overflow: auto;"></textarea><br><br>
 
             
-            <button type="submit">Submit Form</button>
+            <button type="submit">Place Donation</button>
         </form>
 
         <br>
