--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         h1 {
             font-size: 48px;
             font-weight: bold;
-            color: #abf7b1;
+            color: #008631;
             margin-bottom: 20px;
         }
 
